--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link href="./assets/css/core/library.css" rel="stylesheet" />
     <link href="./assets/css/core/variables.css" rel="stylesheet" />
     <link href="./assets/css/styles.css" rel="stylesheet" />
@@ -58,8 +62,8 @@
     <!-- Основной контент -->
     <main class="page__portfolio portfolio">
       <!-- Кнопки фильтра проектов портфолио-->
-      <div class="container">
-        <section class="portfolio__list list d-flex flex-column container-vertical-padding">
+      <section class="portfolio__list list">
+        <div class="container container-vertical-padding">
           <ul class="list__filter filter d-flex justify-content-center">
             <li class="filter__item item">
               <button class="item__button button" type="button">Усі</button>
@@ -78,16 +82,13 @@
             </li>
           </ul>
           <!-- Проекты компании -->
-          <!-- TODO Поменять структуру li для всех элементов ниже -->
-          <ul class="list__cards cards d-flex flex-wrap justify-content-between">
+          <ul class="list__cards cards d-flex flex-wrap">
             <li class="cards__item item">
               <a class="item__link link" href="#">
-                <div>
-                  <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
-                  <div class="item__content">
-                    <h2 class="link__title">Технокряк</h2>
-                    <p class="link__paragraph">Веб-сайт</p> <!-- TODO Поменять paragraph на другое название -->
-                  </div>
+                <img class="link__picture" src="./assets/images/jpg/portfolio-pic1.jpg" alt="" />
+                <div class="item__content">
+                  <h2 class="link__title">Технокряк</h2>
+                  <p class="link__category">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -96,7 +97,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic2.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Постер New Orlean vs Golden Star</h2>
-                  <p class="link__paragraph">Дизайн</p>
+                  <p class="link__category">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -105,7 +106,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic3.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Ресторан Seafood</h2>
-                  <p class="link__paragraph">Додаток</p>
+                  <p class="link__category">Додаток</p>
                 </div>
               </a>
             </li>
@@ -114,7 +115,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic4.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Проєкт Prime</h2>
-                  <p class="link__paragraph">Маркетинг</p>
+                  <p class="link__category">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -123,7 +124,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic5.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Проєкт Boxes</h2>
-                  <p class="link__paragraph">Додаток</p>
+                  <p class="link__category">Додаток</p>
                 </div>
               </a>
             </li>
@@ -132,7 +133,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic6.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Inspiration has no Borders</h2>
-                  <p class="link__paragraph">Веб-сайт</p>
+                  <p class="link__category">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -141,7 +142,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic7.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Видання Limited Edition</h2>
-                  <p class="link__paragraph">Дизайн</p>
+                  <p class="link__category">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -150,7 +151,7 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic8.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Проєкт LAB</h2>
-                  <p class="link__paragraph">Маркетинг</p>
+                  <p class="link__category">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -159,13 +160,13 @@
                 <img class="link__picture" src="./assets/images/jpg/portfolio-pic9.jpg" alt="" />
                 <div class="item__content">
                   <h2 class="link__title">Growing Business</h2>
-                  <p class="link__paragraph">Додаток</p>
+                  <p class="link__category">Додаток</p>
                 </div>
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!-- Подвал -->
     <footer class="footer">
