--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       </section>
 
       <!-- Плюсы компании -->
-      <section class="features">
+      <section class="features container-top-padding">
         <!-- Скрытый заголовок -->
-        <div class="d-flex container container-top-padding">
+        <div class="d-flex container ">
           <h2 class="features__title title visually-hidden">Особливості нашої роботи</h2>
           <ul class="features__list list d-flex">
             <li class="list__item item">
@@ -103,8 +103,8 @@
         </div>
       </section>
       <!-- Чем занимается компания -->
-      <section class="gallery">
-        <div class="container container-vertical-padding">
+      <section class="gallery container-vertical-padding">
+        <div class="container ">
           <h2 class="gallery__title">Чим ми займаємося</h2>
           <ul class="gallery__list list d-flex justify-content-center">
             <li class="list__item item">
@@ -135,8 +135,8 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="our-team">
-        <div class="container container-vertical-padding">
+      <section class="our-team container-vertical-padding">
+        <div class="container">
           <h2 class="our-team__title">Наша команда</h2>
           <ul class="our-team__list list d-flex justify-content-center">
             <li class="list__item item">
@@ -192,8 +192,8 @@
       </section>
     </main>
     <!-- Подвал -->
-    <footer class="footer">
-      <div class="container footer__content">
+    <footer class="footer footer__content">
+      <div class="container">
         <a class="footer__logo logo" href="./index.html">
           Web<span class="logo__part">Studio</span>
         </a>
