--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
     <!-- Основной контент -->
     <main class="page__portfolio portfolio">
       <!-- Кнопки фильтра проектов портфолио-->
-      <section class="portfolio__list list">
-        <div class="container container-vertical-padding">
+      <section class="portfolio__list list  container-vertical-padding">
+        <div class="container">
           <ul class="list__filter filter d-flex justify-content-center">
             <li class="filter__item item">
               <button class="item__button button" type="button">Усі</button>
